// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regionOverflow renders 0 1`] = `
Array [
  .c0 {
  region-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders function 1`] = `
Array [
  .c0 {
  region-overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: has;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders invalid theme path 1`] = `
Array [
  .c0 {
  region-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders negative number 1`] = `
Array [
  .c0 {
  region-overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  region-overflow: July;
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: July;
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    region-overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    region-overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    region-overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    region-overflow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  region-overflow: July;
}

@media May {
  .c0 {
    region-overflow: August;
  }
}

@media April {
  .c0 {
    region-overflow: September;
  }
}

@media January {
  .c0 {
    region-overflow: November;
  }
}

@media April {
  .c0 {
    region-overflow: August;
  }
}

@media June {
  .c0 {
    region-overflow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: July;
}

@media May {
  .c0 {
    region-overflow: August;
  }
}

@media April {
  .c0 {
    region-overflow: September;
  }
}

@media January {
  .c0 {
    region-overflow: November;
  }
}

@media April {
  .c0 {
    region-overflow: August;
  }
}

@media June {
  .c0 {
    region-overflow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    region-overflow: November;
  }
}

@media April {
  .c0 {
    region-overflow: January;
  }
}

@media January {
  .c0 {
    region-overflow: December;
  }
}

@media April {
  .c0 {
    region-overflow: April;
  }
}

@media June {
  .c0 {
    region-overflow: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    region-overflow: November;
  }
}

@media April {
  .c0 {
    region-overflow: January;
  }
}

@media January {
  .c0 {
    region-overflow: December;
  }
}

@media April {
  .c0 {
    region-overflow: April;
  }
}

@media June {
  .c0 {
    region-overflow: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    region-overflow: July;
  }
}

@media April {
  .c0 {
    region-overflow: August;
  }
}

@media January {
  .c0 {
    region-overflow: September;
  }
}

@media April {
  .c0 {
    region-overflow: November;
  }
}

@media June {
  .c0 {
    region-overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    region-overflow: July;
  }
}

@media April {
  .c0 {
    region-overflow: August;
  }
}

@media January {
  .c0 {
    region-overflow: September;
  }
}

@media April {
  .c0 {
    region-overflow: November;
  }
}

@media June {
  .c0 {
    region-overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    region-overflow: January;
  }
}

@media April {
  .c0 {
    region-overflow: December;
  }
}

@media January {
  .c0 {
    region-overflow: April;
  }
}

@media April {
  .c0 {
    region-overflow: May;
  }
}

@media June {
  .c0 {
    region-overflow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    region-overflow: January;
  }
}

@media April {
  .c0 {
    region-overflow: December;
  }
}

@media January {
  .c0 {
    region-overflow: April;
  }
}

@media April {
  .c0 {
    region-overflow: May;
  }
}

@media June {
  .c0 {
    region-overflow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders postitive number 1`] = `
Array [
  .c0 {
  region-overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders string 1`] = `
Array [
  .c0 {
  region-overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: June;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`regionOverflow renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`regionOverflow renders valid theme path 1`] = `
Array [
  .c0 {
  region-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  region-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
